--- a/src/public/styles/utils/vars.scss
+++ b/src/public/styles/utils/vars.scss
@@ -6,13 +6,13 @@ $main-title-size: 18px;
 $note-screen: 1440px;
 
 //  Main Colors
-$default-body-color: #212121;
+$default-body-color: #2b2b2b;
 
 $main-dark-color: #003fb2;
 $main-middle-color: #3b69e5;
 $main-light-color: #7a96ff;
 
-$main-title-color: #212121;
+$main-title-color: #2b2b2b;
 $light-title-color: #fafafa;
 
 $main-text-color: #616161;
