--- a/src/app/components/pages/products-selected/product-selected.scss
+++ b/src/app/components/pages/products-selected/product-selected.scss
@@ -12,7 +12,6 @@
                 width: 195px;
                 height: 135px;
 
-
                 & > .slider-item,
                 & > .slider-item > label,
                 & > .slider-item > label > .slider--item_image,
@@ -58,7 +57,7 @@
                             transition: all 0.3s ease;
 
                             &.no-image {
-                                transform: scale(.75) translate3d(0, 0, 0) !important;
+                                transform: scale(0.75) translate3d(0, 0, 0) !important;
                             }
                         }
 
@@ -96,6 +95,85 @@
     }
 }
 
+.selected-product-content .text > .title {
+    margin: 0 0 42px;
+
+    > h1 {
+        margin: 0 0 12px;
+    }
+
+    > .descriptor p {
+        font-family: "Roboto-Medium";
+        font-size: 15px;
+        color: $default-body-color;
+        text-indent: 0;
+    }
+
+    .descriptor {
+        width: 95%;
+        > .sub {
+            margin-top: 24px;
+            > p {
+                position: relative;
+                font-size: 18px;
+                margin: 0 0 12px;
+                text-indent: 0;
+
+                &:before {
+                    position: absolute;
+                    content: "";
+                    bottom: -7px;
+                    left: 0;
+                    width: 25%;
+                    height: 2px;
+                    border-radius: 4px;
+                    background: linear-gradient(
+                        90deg,
+                        $main-middle-color 0%,
+                        $main-middle-color 25%,
+                        $main-light-color 50%,
+                        transparent 100%
+                    );
+                }
+            }
+        }
+    }
+
+    > .descriptor ol {
+        width: 100%;
+        padding: 4px 18px;
+
+        > li {
+            position: relative;
+            font-family: "Roboto-Medium";
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            line-height: 1.5;
+            letter-spacing: normal;
+            text-decoration: inherit;
+            text-transform: inherit;
+            text-indent: 0;
+            color: $default-body-color;
+            margin: 0 0 7px;
+            padding: 0px 10px;
+            list-style: none;
+            @include responsive(font-size, (15, 14));
+
+            &:before {
+                position: absolute;
+                content: "";
+                top: 6px;
+                left: -14px;
+                width: 6px;
+                height: 6px;
+                border: 2px solid $main-dark-color;
+                border-radius: 100%;
+                background-color: transparent;
+            }
+        }
+    }
+}
+
 .product-selected--content {
     position: relative;
     display: block;
@@ -114,45 +192,67 @@
         }
     }
 
-    > .content {
-        > table {
-            width: 80%;
-            > thead > tr > td:first-child,
-            > tbody > tr > td:first-child {
-                width: 50%;
-                min-width: 495px;
-            }
+    .props {
+        margin: 0 0 12px;
 
-            > thead > tr > td:last-child,
-            > tbody > tr > td:last-child {
-                width: 32%;
-                min-width: 155px;
-            }
+        > ul {
+            display: grid;
+            @include responsive(grid-template-columns, (repeat(3, 1fr), repeat(2, 1fr)));
+            grid-gap: 10px 75px;
+            list-style: none;
+            padding: 4px 20px;
 
-            > thead > tr > td {
-                padding: 8px 12px;
-                border: 0 solid rgba($color: $default-body-color, $alpha: 0.45);
-                border-bottom-width: 1px;
-                font-family: "Roboto-Medium", sans-serif;
-                color: $default-body-color;
-            }
+            > li {
+                padding: 0;
+                font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+                    "Open Sans", "Helvetica Neue", sans-serif;
+                font-weight: 500;
+                font-size: 16px;
+                @include responsive(font-size, (16, 16));
+                text-indent: 0;
+                color: #2b2b2b;
 
-            > tbody > tr {
-                &:first-child > td {
-                    padding-top: 12px;
+                &:before {
+                    position: absolute;
+                    content: "";
+                    top: 6px;
+                    left: -17px;
+                    width: 8px;
+                    height: 8px;
+                    border: 2px solid $main-dark-color;
+                    border-radius: 100%;
+                    background-color: transparent;
                 }
 
-                > td {
-                    font-family: inherit;
-                    -webkit-font-smoothing: antialiased;
-                    -moz-osx-font-smoothing: grayscale;
-                    line-height: 1.5;
-                    letter-spacing: normal;
-                    text-decoration: inherit;
-                    text-transform: inherit;
-                    color: #616161;
-                    @include responsive("font-size", (16, 14));
-                    padding: 4px 12px;
+                > ul {
+                    list-style: none;
+                    padding: 0px;
+
+                    > li {
+                        padding: 0;
+                        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+                            "Open Sans", "Helvetica Neue", sans-serif;
+                        font-weight: 400;
+                        @include responsive(font-size, (16, 16));
+                        text-indent: 0;
+                        color: #2b2b2b;
+
+                        &:first-child {
+                            margin-top: 4px;
+                        }
+
+                        &:before {
+                            position: absolute;
+                            content: "";
+                            top: 0;
+                            left: -12px;
+                            width: 2px;
+                            height: 100%;
+                            border: 0;
+                            border-radius: 4px;
+                            background-color: $main-dark-color;
+                        }
+                    }
                 }
             }
         }
