--- a/src/app/components/pages/products-selected/product-selected.scss
+++ b/src/app/components/pages/products-selected/product-selected.scss
@@ -210,6 +210,7 @@
                 font-size: 16px;
                 @include responsive(font-size, (16, 16));
                 text-indent: 0;
+                white-space: nowrap;
                 color: #2b2b2b;
 
                 &:before {
