--- a/src/public/styles/styles.scss
+++ b/src/public/styles/styles.scss
@@ -214,7 +214,7 @@ a._action {
     height: 36px;
     border-radius: 4px;
     float: left;
-    font-family: "Roboto-Medium", sans-serif;
+    font-family: "Roboto-Regular", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     line-height: inherit;
@@ -392,16 +392,17 @@ article.content {
         display: block;
         > li {
             position: relative;
-            padding: 0px 15px;
+            padding: 0px 1.6em;
             &:before {
                 position: absolute;
                 content: "";
-                top: 0;
+                top: 7px;
                 left: 2px;
                 bottom: 0;
-                width: 2px;
-                border-radius: 4px;
-                background-color: $main-middle-color;
+                width: 6px;
+                height: 6px;
+                border: 2px solid $main-dark-color;
+                border-radius: 100%;
             }
         }
     }
@@ -411,17 +412,16 @@ article.text {
     @include responsive(padding, ("42px 14.5% 116px", "42px 7.5% 116px"));
     p,
     ul > li {
-        font-family: "Roboto-Medium";
+        font-family: "Roboto-Regular";
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
         line-height: 1.5;
         letter-spacing: normal;
         text-decoration: inherit;
         text-transform: inherit;
-        //text-indent: 1.5em;
         color: $default-body-color;
         margin: 0 0 7px;
-        @include responsive(font-size, (15px, 14px));
+        @include responsive(font-size, (16px, 14px));
     }
     img {
         display: block;
